cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificUnaryExprsCheckLevel2.cif.check.err
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel2.cif": Semantic warning at line 15, column 1: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel2.cif": Semantic warning at line 19, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel2.cif": Semantic warning at line 25, column 5: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel2.cif": Semantic warning at line 38, column 3: Duplicate state invariant.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -------------------------------------------------------------------
  (1/4) Unary operator "+" is used on a ranged integer typed operand.
  -------------------------------------------------------------------
   * In group "PLUS_INTS_RANGED":
     - invariant 1 = +1;
                     ^

  ----------------------------------------------------------------------
  (2/4) Unary operator "+" is used on a rangeless integer typed operand.
  ----------------------------------------------------------------------
   * In automaton "PLUS_INTS_RANGELESS":
     - invariant v = +v;
                     ^

  -------------------------------------------------------------------
  (3/4) Unary operator "-" is used on a ranged integer typed operand.
  -------------------------------------------------------------------
   * In group "NEGATE_INTS_RANGED":
     - invariant 1 = -1;
                     ^

  ----------------------------------------------------------------------
  (4/4) Unary operator "-" is used on a rangeless integer typed operand.
  ----------------------------------------------------------------------
   * In automaton "NEGATE_INTS_RANGELESS":
     - invariant v = -v;
                     ^
